<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">现钞管理系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="id">ID</string>
	<string name="count">count</string>
	<string name="inventory">Start Inventory</string>
		<string name="stop_inventory">Stop Inventory</string>
	<string name="clear">清除</string>
	<string name="membank">Membank</string>
	<string name="accesspassword">Access Password</string>
	<string name="addr">Address(word)</string>
	<string name="len">Length(word)</string>
	<string name="read">读取标签</string>
	<string name="write">写入标签</string>
	<string name="writedata">Write Data(HEX)</string>
	<string name="locktype">Lock Type</string>
	<string name="locktag">Lock Tag</string>
	<string name="kill">Kill Tag</string>
	<string name="killpassword">Kill Password</string>
	<string name="readdata">Read Data</string>
	<string name="back">Back</string>
	<string name="parameterSetting">Parameter Setting</string>
	<string name="sensitivity">Sensitivity</string>
	<string name="set">set</string>
	<string name="rfPower">RF power</string>
	<string name="workArea">Work Area</string>
    <string name="freqSetting">Freq setting</string>
    <string name="china2Freq">China2：920125kHz~924875kHz</string>
    <string name="usaFreq">USA：902250kHz~927750kHz</string>
    <string name="euFreq">Europe：865100kHz~867900kHz</string>
    <string name="china1Freq">China1：840125kHz~844875kHz</string>
    <string name="koreaFreq">Korea：917700kHz~923300kHz</string>
    <string name="setSuccess">Set success</string>
    <string name="freqNotNull">Frequency not null</string>
</resources>